--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.servlet.context-path=/case-study
+server.port=8080
 # v manage timestamp when convert java bean to json
 spring.jackson.time-zone=Asia/Bangkok
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
