--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,8 +52,15 @@ spring.datasource.pg2.hikari.maximum-pool-size=20
 #spring.activemq.password=admin
 #spring.activemq.pool.enabled=true
 #spring.activemq.pool.max-connections=50
-
-
+# ===============================
+# = IBM MQ Config
+# ===============================
+ibm.mq.queueManager=QM1
+ibm.mq.channel=DEV.ADMIN.SVRCONN
+ibm.mq.connName=localhost(1414)
+ibm.mq.user=admin
+ibm.mq.password=passw0rd
+ibm.mq.in.q1=DEV.QUEUE.1
 
 
 # ===============================
