modified some codes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,7 +60,9 @@ ibm.mq.channel=DEV.ADMIN.SVRCONN
 ibm.mq.connName=localhost(1414)
 ibm.mq.user=admin
 ibm.mq.password=passw0rd
+## custom ##
 ibm.mq.in.q1=DEV.QUEUE.1
+ibm.mq.in.q2=DEV.QUEUE.2
 
 
 # ===============================
